Added exceptions back to aoserv-client.