@@ -9,11 +9,9 @@ import com.aoindustries.io.CompressedDataInputStream;
 import com.aoindustries.io.CompressedDataOutputStream;
 import com.aoindustries.sql.SQLUtility;
 import com.aoindustries.util.StringUtility;
-import com.aoindustries.util.WrappedException;
 import java.io.IOException;
 import java.math.BigDecimal;
 import java.net.InetAddress;
-import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.UnknownHostException;
 import java.sql.ResultSet;
@@ -156,465 +154,461 @@ final public class SchemaType extends GlobalObjectIntegerKey<SchemaType> {
      * BIG_DECIMAL     X  X           X  X  X        X     X  X     X  X  X              X     X                 X
      * </pre>
      */
-    public Object cast(AOServConnector conn, Object value, SchemaType castToType) {
-        try {
-            switch(pkey) {
-                case ACCOUNTING:
+    public Object cast(AOServConnector conn, Object value, SchemaType castToType) throws IOException, SQLException {
+        switch(pkey) {
+            case ACCOUNTING:
+                switch(castToType.getNum()) {
+                    case ACCOUNTING:
+                    case PACKAGE:
+                    case STRING: return value;
+                }
+                break;
+            case BOOLEAN:
+                {
+                    boolean bvalue=value==null?false:((Boolean)value).booleanValue();
                     switch(castToType.getNum()) {
-                        case ACCOUNTING:
-                        case PACKAGE:
-                        case STRING: return value;
+                        case BOOLEAN: return value;
+                        case BYTE: return value==null?null:new Byte(bvalue?(byte)-1:0);
+                        case DECIMAL_2: return value==null?null:Integer.valueOf(bvalue?-100:0);
+                        case DECIMAL_3: return value==null?null:Integer.valueOf(bvalue?-1000:0);
+                        case DOUBLE: return value==null?null:new Double(bvalue?-1:0);
+                        case FLOAT: return value==null?null:Float.valueOf(bvalue?-1:0);
+                        case INT: return value==null?null:Integer.valueOf(bvalue?-1:0);
+                        case LONG: return value==null?null:Long.valueOf(bvalue?(long)-1:0);
+                        case OCTAL_INT: return value==null?null:Integer.valueOf(bvalue?-1:0);
+                        case OCTAL_LONG: return value==null?null:Long.valueOf(bvalue?(long)-1:0);
+                        case SHORT: return value==null?null:Short.valueOf(bvalue?(short)-1:0);
+                        case STRING: return value==null?null:bvalue?"true":"false";
+                        case BIG_DECIMAL: return value==null?null:bvalue?bigDecimalNegativeOne:BigDecimal.ZERO;
                     }
-                    break;
-                case BOOLEAN:
-                    {
-                        boolean bvalue=value==null?false:((Boolean)value).booleanValue();
-                        switch(castToType.getNum()) {
-                            case BOOLEAN: return value;
-                            case BYTE: return value==null?null:new Byte(bvalue?(byte)-1:0);
-                            case DECIMAL_2: return value==null?null:Integer.valueOf(bvalue?-100:0);
-                            case DECIMAL_3: return value==null?null:Integer.valueOf(bvalue?-1000:0);
-                            case DOUBLE: return value==null?null:new Double(bvalue?-1:0);
-                            case FLOAT: return value==null?null:Float.valueOf(bvalue?-1:0);
-                            case INT: return value==null?null:Integer.valueOf(bvalue?-1:0);
-                            case LONG: return value==null?null:Long.valueOf(bvalue?(long)-1:0);
-                            case OCTAL_INT: return value==null?null:Integer.valueOf(bvalue?-1:0);
-                            case OCTAL_LONG: return value==null?null:Long.valueOf(bvalue?(long)-1:0);
-                            case SHORT: return value==null?null:Short.valueOf(bvalue?(short)-1:0);
-                            case STRING: return value==null?null:bvalue?"true":"false";
-                            case BIG_DECIMAL: return value==null?null:bvalue?bigDecimalNegativeOne:BigDecimal.ZERO;
-                        }
-                    }
-                    break;
-                case BYTE:
-                    {
-                        byte bvalue=value==null?0:((Byte)value).byteValue();
-                        switch(castToType.getNum()) {
-                            case BOOLEAN: return value==null?null:bvalue!=0?Boolean.TRUE:Boolean.FALSE;
-                            case BYTE: return value;
-                            case DECIMAL_2: return value==null?null:Integer.valueOf(bvalue*100);
-                            case DECIMAL_3: return value==null?null:Integer.valueOf(bvalue*1000);
-                            case DOUBLE: return value==null?null:new Double((double)bvalue);
-                            case FLOAT: return value==null?null:Float.valueOf(bvalue);
-                            case INT: return value==null?null:Integer.valueOf(bvalue);
-                            case INTERVAL: return value==null?null:Long.valueOf(bvalue);
-                            case LONG: return value==null?null:Long.valueOf(bvalue);
-                            case OCTAL_INT: return value==null?null:Integer.valueOf(bvalue);
-                            case OCTAL_LONG: return value==null?null:Long.valueOf(bvalue);
-                            case SHORT: return value==null?null:Short.valueOf(bvalue);
-                            case STRING: return value==null?null:value.toString();
-                            case BIG_DECIMAL: return value==null?null:BigDecimal.valueOf(bvalue);
-                        }
-                    }
-                    break;
-                case CITY:
+                }
+                break;
+            case BYTE:
+                {
+                    byte bvalue=value==null?0:((Byte)value).byteValue();
                     switch(castToType.getNum()) {
-                        case CITY: return value;
-                        case STRING: return value;
-                    }
-                    break;
-                case COUNTRY:
-                    switch(castToType.getNum()) {
-                        case COUNTRY: return value;
-                        case STRING: return value;
-                    }
-                    break;
-                case DATE:
-                    {
-                        long tvalue=value==null?0:((java.sql.Date)value).getTime();
-                        switch(castToType.getNum()) {
-                            case DATE: return value;
-                            case DECIMAL_2: return value==null?null:Integer.valueOf((int)(SQLUtility.getDaysFromMillis(tvalue)*100));
-                            case DECIMAL_3: return value==null?null:Integer.valueOf((int)(SQLUtility.getDaysFromMillis(tvalue)*1000));
-                            case DOUBLE: return value==null?null:new Double(SQLUtility.getDaysFromMillis(tvalue));
-                            case FLOAT: return value==null?null:Float.valueOf(SQLUtility.getDaysFromMillis(tvalue));
-                            case INT: return value==null?null:Integer.valueOf((int)(SQLUtility.getDaysFromMillis(tvalue)));
-                            case LONG: return value==null?null:Long.valueOf(SQLUtility.getDaysFromMillis(tvalue));
-                            case OCTAL_INT: return value==null?null:Integer.valueOf((int)(SQLUtility.getDaysFromMillis(tvalue)));
-                            case OCTAL_LONG: return value==null?null:Long.valueOf(SQLUtility.getDaysFromMillis(tvalue));
-                            case SHORT: return value==null?null:Short.valueOf((short)(SQLUtility.getDaysFromMillis(tvalue)));
-                            case STRING: return value==null?null:SQLUtility.getDate(tvalue);
-                            case TIME: return value==null?null:new java.sql.Date(SQLUtility.roundToDay(tvalue));
-                            case BIG_DECIMAL: return value==null?null:BigDecimal.valueOf(SQLUtility.getDaysFromMillis(tvalue));
-                        }
-                    }
-                    break;
-                case DECIMAL_2:
-                    {
-                        int ivalue=value==null?0:((Integer)value).intValue();
-                        switch(castToType.getNum()) {
-                            case BOOLEAN: return value==null?null:ivalue!=0?Boolean.TRUE:Boolean.FALSE;
-                            case BYTE: return value==null?null:new Byte((byte)(ivalue/100));
-                            case DECIMAL_2: return value;
-                            case DECIMAL_3: return value==null?null:Integer.valueOf(ivalue*10);
-                            case DOUBLE: return value==null?null:new Double((double)ivalue/100);
-                            case FLOAT: return value==null?null:Float.valueOf((float)ivalue/100);
-                            case INT: return value==null?null:Integer.valueOf(ivalue/100);
-                            case INTERVAL: return value==null?null:Long.valueOf(ivalue/100);
-                            case LONG: return value==null?null:Long.valueOf(ivalue/100);
-                            case OCTAL_INT: return value==null?null:Integer.valueOf(ivalue/100);
-                            case OCTAL_LONG: return value==null?null:Long.valueOf(ivalue/100);
-                            case SHORT: return value==null?null:Short.valueOf((short)(ivalue/100));
-                            case STRING: return value;
-                            case BIG_DECIMAL: return value==null?null:new BigDecimal(SQLUtility.getDecimal(ivalue));
-                        }
-                    }
-                    break;
-                case DECIMAL_3:
-                    {
-                        int ivalue=value==null?0:((Integer)value).intValue();
-                        switch(castToType.getNum()) {
-                            case BOOLEAN: return value==null?null:ivalue!=0?Boolean.TRUE:Boolean.FALSE;
-                            case BYTE: return value==null?null:new Byte((byte)(ivalue/1000));
-                            case DECIMAL_2: return value==null?null:Integer.valueOf(ivalue/10);
-                            case DECIMAL_3: return value;
-                            case DOUBLE: return value==null?null:new Double((double)ivalue/1000);
-                            case FLOAT: return value==null?null:Float.valueOf((float)ivalue/1000);
-                            case INT: return value==null?null:Integer.valueOf(ivalue/1000);
-                            case INTERVAL: return value==null?null:Long.valueOf(ivalue/1000);
-                            case LONG: return value==null?null:Long.valueOf(ivalue/1000);
-                            case OCTAL_INT: return value==null?null:Integer.valueOf(ivalue/1000);
-                            case OCTAL_LONG: return value==null?null:Long.valueOf(ivalue/1000);
-                            case SHORT: return value==null?null:Short.valueOf((short)(ivalue/1000));
-                            case STRING: return value;
-                            case BIG_DECIMAL: return value==null?null:new BigDecimal(SQLUtility.getDecimal(ivalue));
-                        }
-                    }
-                    break;
-                case DOUBLE:
-                    {
-                        double dvalue=value==null?0:((Double)value).doubleValue();
-                        switch(castToType.getNum()) {
-                            case BOOLEAN: return value==null?null:dvalue!=0?Boolean.TRUE:Boolean.FALSE;
-                            case BYTE: return value==null?null:new Byte((byte)dvalue);
-                            case DECIMAL_2: return value==null?null:Integer.valueOf((int)(dvalue*100));
-                            case DECIMAL_3: return value==null?null:Integer.valueOf((int)(dvalue*1000));
-                            case DOUBLE: return value;
-                            case FLOAT: return value==null?null:Float.valueOf((float)dvalue);
-                            case INT: return value==null?null:Integer.valueOf((int)dvalue);
-                            case INTERVAL: return value==null?null:Long.valueOf((long)dvalue);
-                            case LONG: return value==null?null:Long.valueOf((long)dvalue);
-                            case OCTAL_INT: return value==null?null:Integer.valueOf((int)dvalue);
-                            case OCTAL_LONG: return value==null?null:Long.valueOf((long)dvalue);
-                            case SHORT: return value==null?null:Short.valueOf((short)dvalue);
-                            case STRING: return value==null?null:value.toString();
-                            case BIG_DECIMAL: return value==null?null:BigDecimal.valueOf(dvalue);
-                        }
-                    }
-                    break;
-                case EMAIL:
-                    switch(castToType.getNum()) {
-                        case EMAIL: return value;
-                        case HOSTNAME: return value==null?null:getHostnameForEmail((String)value);
-                        case INT: return value==null?null:Integer.valueOf(IPAddress.getIntForIPAddress(getIPAddressForHostname(getHostnameForEmail((String)value))));
-                        case IP_ADDRESS: return value==null?null:getIPAddressForHostname(getHostnameForEmail((String)value));
-                        case OCTAL_INT: return value==null?null:Integer.valueOf(IPAddress.getIntForIPAddress(getIPAddressForHostname(getHostnameForEmail((String)value))));
-                        case STRING: return value;
-                        case URL: return value==null?null:"mailto:"+((String)value);
-                        case USERNAME: return value==null?null:getUsernameForEmail((String)value);
-                        case ZONE: return value==null?null:getZoneForHostname(conn, getHostnameForEmail((String)value));
-                    }
-                    break;
-                case FKEY:
-                    switch(castToType.getNum()) {
-                        case FKEY: return value;
-                        case INT: return value;
-                        case OCTAL_INT: return value;
-                        case PKEY: return value;
+                        case BOOLEAN: return value==null?null:bvalue!=0?Boolean.TRUE:Boolean.FALSE;
+                        case BYTE: return value;
+                        case DECIMAL_2: return value==null?null:Integer.valueOf(bvalue*100);
+                        case DECIMAL_3: return value==null?null:Integer.valueOf(bvalue*1000);
+                        case DOUBLE: return value==null?null:new Double((double)bvalue);
+                        case FLOAT: return value==null?null:Float.valueOf(bvalue);
+                        case INT: return value==null?null:Integer.valueOf(bvalue);
+                        case INTERVAL: return value==null?null:Long.valueOf(bvalue);
+                        case LONG: return value==null?null:Long.valueOf(bvalue);
+                        case OCTAL_INT: return value==null?null:Integer.valueOf(bvalue);
+                        case OCTAL_LONG: return value==null?null:Long.valueOf(bvalue);
+                        case SHORT: return value==null?null:Short.valueOf(bvalue);
                         case STRING: return value==null?null:value.toString();
+                        case BIG_DECIMAL: return value==null?null:BigDecimal.valueOf(bvalue);
                     }
-                    break;
-                case FLOAT:
-                    {
-                        float fvalue=value==null?0:((Float)value).floatValue();
-                        switch(castToType.getNum()) {
-                            case BOOLEAN: return value==null?null:fvalue!=0?Boolean.TRUE:Boolean.FALSE;
-                            case BYTE: return value==null?null:new Byte((byte)fvalue);
-                            case DECIMAL_2: return value==null?null:Integer.valueOf((int)(fvalue*100));
-                            case DECIMAL_3: return value==null?null:Integer.valueOf((int)(fvalue*1000));
-                            case DOUBLE: return value==null?null:new Double(fvalue);
-                            case FLOAT: return value;
-                            case INT: return value==null?null:Integer.valueOf((int)fvalue);
-                            case INTERVAL: return value==null?null:Long.valueOf((long)fvalue);
-                            case LONG: return value==null?null:Long.valueOf((long)fvalue);
-                            case OCTAL_INT: return value==null?null:Integer.valueOf((int)fvalue);
-                            case OCTAL_LONG: return value==null?null:Long.valueOf((long)fvalue);
-                            case SHORT: return value==null?null:Short.valueOf((short)fvalue);
-                            case STRING: return value==null?null:value.toString();
-                            case BIG_DECIMAL: return value==null?null:BigDecimal.valueOf(fvalue);
-                        }
-                    }
-                    break;
-                case HOSTNAME:
+                }
+                break;
+            case CITY:
+                switch(castToType.getNum()) {
+                    case CITY: return value;
+                    case STRING: return value;
+                }
+                break;
+            case COUNTRY:
+                switch(castToType.getNum()) {
+                    case COUNTRY: return value;
+                    case STRING: return value;
+                }
+                break;
+            case DATE:
+                {
+                    long tvalue=value==null?0:((java.sql.Date)value).getTime();
                     switch(castToType.getNum()) {
-                        case HOSTNAME: return value;
-                        case INT: return value==null?null:Integer.valueOf(IPAddress.getIntForIPAddress(getIPAddressForHostname((String)value)));
-                        case IP_ADDRESS: return value==null?null:getIPAddressForHostname((String)value);
-                        case OCTAL_INT: return value==null?null:Integer.valueOf(IPAddress.getIntForIPAddress(getIPAddressForHostname((String)value)));
+                        case DATE: return value;
+                        case DECIMAL_2: return value==null?null:Integer.valueOf((int)(SQLUtility.getDaysFromMillis(tvalue)*100));
+                        case DECIMAL_3: return value==null?null:Integer.valueOf((int)(SQLUtility.getDaysFromMillis(tvalue)*1000));
+                        case DOUBLE: return value==null?null:new Double(SQLUtility.getDaysFromMillis(tvalue));
+                        case FLOAT: return value==null?null:Float.valueOf(SQLUtility.getDaysFromMillis(tvalue));
+                        case INT: return value==null?null:Integer.valueOf((int)(SQLUtility.getDaysFromMillis(tvalue)));
+                        case LONG: return value==null?null:Long.valueOf(SQLUtility.getDaysFromMillis(tvalue));
+                        case OCTAL_INT: return value==null?null:Integer.valueOf((int)(SQLUtility.getDaysFromMillis(tvalue)));
+                        case OCTAL_LONG: return value==null?null:Long.valueOf(SQLUtility.getDaysFromMillis(tvalue));
+                        case SHORT: return value==null?null:Short.valueOf((short)(SQLUtility.getDaysFromMillis(tvalue)));
+                        case STRING: return value==null?null:SQLUtility.getDate(tvalue);
+                        case TIME: return value==null?null:new java.sql.Date(SQLUtility.roundToDay(tvalue));
+                        case BIG_DECIMAL: return value==null?null:BigDecimal.valueOf(SQLUtility.getDaysFromMillis(tvalue));
+                    }
+                }
+                break;
+            case DECIMAL_2:
+                {
+                    int ivalue=value==null?0:((Integer)value).intValue();
+                    switch(castToType.getNum()) {
+                        case BOOLEAN: return value==null?null:ivalue!=0?Boolean.TRUE:Boolean.FALSE;
+                        case BYTE: return value==null?null:new Byte((byte)(ivalue/100));
+                        case DECIMAL_2: return value;
+                        case DECIMAL_3: return value==null?null:Integer.valueOf(ivalue*10);
+                        case DOUBLE: return value==null?null:new Double((double)ivalue/100);
+                        case FLOAT: return value==null?null:Float.valueOf((float)ivalue/100);
+                        case INT: return value==null?null:Integer.valueOf(ivalue/100);
+                        case INTERVAL: return value==null?null:Long.valueOf(ivalue/100);
+                        case LONG: return value==null?null:Long.valueOf(ivalue/100);
+                        case OCTAL_INT: return value==null?null:Integer.valueOf(ivalue/100);
+                        case OCTAL_LONG: return value==null?null:Long.valueOf(ivalue/100);
+                        case SHORT: return value==null?null:Short.valueOf((short)(ivalue/100));
                         case STRING: return value;
-                        case ZONE: return value==null?null:getZoneForHostname(conn, (String)value);
+                        case BIG_DECIMAL: return value==null?null:new BigDecimal(SQLUtility.getDecimal(ivalue));
                     }
-                    break;
-                case INT:
-                    {
-                        int ivalue=value==null?0:((Integer)value).intValue();
-                        switch(castToType.getNum()) {
-                            case BOOLEAN: return value==null?null:ivalue!=0?Boolean.TRUE:Boolean.FALSE;
-                            case BYTE: return value==null?null:new Byte((byte)ivalue);
-                            case DATE: return value==null?null:new java.sql.Date(SQLUtility.getMillisFromDays(ivalue));
-                            case DECIMAL_2: return value==null?null:Integer.valueOf(ivalue*100);
-                            case DECIMAL_3: return value==null?null:Integer.valueOf(ivalue*1000);
-                            case DOUBLE: return value==null?null:new Double(ivalue);
-                            case FKEY: return value;
-                            case FLOAT: return value==null?null:Float.valueOf((float)ivalue);
-                            case HOSTNAME: return value==null?null:getHostnameForIPAddress(IPAddress.getIPAddressForInt(ivalue));
-                            case INT: return value;
-                            case INTERVAL: return value==null?null:Long.valueOf(ivalue);
-                            case IP_ADDRESS: return value==null?null:IPAddress.getIPAddressForInt(ivalue);
-                            case LONG: return value==null?null:Long.valueOf(ivalue);
-                            case OCTAL_INT: return value;
-                            case OCTAL_LONG: return value==null?null:Long.valueOf(ivalue);
-                            case PKEY: return value;
-                            case SHORT: return value==null?null:Short.valueOf((short)ivalue);
-                            case STRING: return value==null?null:value.toString();
-                            case ZONE: return value==null?null:getZoneForHostname(conn, getHostnameForIPAddress(IPAddress.getIPAddressForInt(ivalue)));
-                            case BIG_DECIMAL: return value==null?null:BigDecimal.valueOf(ivalue);
-                        }
-                    }
-                    break;
-                case INTERVAL:
-                    {
-                        long lvalue=value==null?0:((Long)value).longValue();
-                        switch(castToType.getNum()) {
-                            case BYTE: return value==null?null:new Byte((byte)lvalue);
-                            case DECIMAL_2: return value==null?null:Integer.valueOf((int)(lvalue*100));
-                            case DECIMAL_3: return value==null?null:Integer.valueOf((int)(lvalue*1000));
-                            case DOUBLE: return value==null?null:new Double((double)lvalue);
-                            case FLOAT: return value==null?null:Float.valueOf((float)lvalue);
-                            case INT: return value==null?null:Integer.valueOf((int)lvalue);
-                            case INTERVAL: return value;
-                            case LONG: return value;
-                            case OCTAL_INT: return value==null?null:Integer.valueOf((int)lvalue);
-                            case OCTAL_LONG: return value;
-                            case SHORT: return value==null?null:Short.valueOf((short)lvalue);
-                            case STRING: return value==null?null:value.toString();
-                            case BIG_DECIMAL: return value==null?null:BigDecimal.valueOf(lvalue);
-                        }
-                    }
-                    break;
-                case IP_ADDRESS:
+                }
+                break;
+            case DECIMAL_3:
+                {
+                    int ivalue=value==null?0:((Integer)value).intValue();
                     switch(castToType.getNum()) {
-                        case HOSTNAME: return value==null?null:getHostnameForIPAddress((String)value);
-                        case INT: return value==null?null:Integer.valueOf(IPAddress.getIntForIPAddress((String)value));
-                        case IP_ADDRESS: return value;
-                        case OCTAL_INT: return value==null?null:Integer.valueOf(IPAddress.getIntForIPAddress((String)value));
+                        case BOOLEAN: return value==null?null:ivalue!=0?Boolean.TRUE:Boolean.FALSE;
+                        case BYTE: return value==null?null:new Byte((byte)(ivalue/1000));
+                        case DECIMAL_2: return value==null?null:Integer.valueOf(ivalue/10);
+                        case DECIMAL_3: return value;
+                        case DOUBLE: return value==null?null:new Double((double)ivalue/1000);
+                        case FLOAT: return value==null?null:Float.valueOf((float)ivalue/1000);
+                        case INT: return value==null?null:Integer.valueOf(ivalue/1000);
+                        case INTERVAL: return value==null?null:Long.valueOf(ivalue/1000);
+                        case LONG: return value==null?null:Long.valueOf(ivalue/1000);
+                        case OCTAL_INT: return value==null?null:Integer.valueOf(ivalue/1000);
+                        case OCTAL_LONG: return value==null?null:Long.valueOf(ivalue/1000);
+                        case SHORT: return value==null?null:Short.valueOf((short)(ivalue/1000));
                         case STRING: return value;
-                        case ZONE: return value==null?null:getZoneForHostname(conn, getHostnameForIPAddress((String)value));
+                        case BIG_DECIMAL: return value==null?null:new BigDecimal(SQLUtility.getDecimal(ivalue));
                     }
-                    break;
-                case LONG:
-                    {
-                        long lvalue=value==null?0:((Long)value).longValue();
-                        switch(castToType.getNum()) {
-                            case BOOLEAN: return value==null?null:lvalue!=0?Boolean.TRUE:Boolean.FALSE;
-                            case BYTE: return value==null?null:new Byte((byte)lvalue);
-                            case DATE: return value==null?null:new java.sql.Date(lvalue);
-                            case DECIMAL_2: return value==null?null:Integer.valueOf((int)(lvalue*100));
-                            case DECIMAL_3: return value==null?null:Integer.valueOf((int)(lvalue*1000));
-                            case DOUBLE: return value==null?null:new Double((double)lvalue);
-                            case FLOAT: return value==null?null:Float.valueOf((float)lvalue);
-                            case INT: return value==null?null:Integer.valueOf((int)lvalue);
-                            case INTERVAL: return value;
-                            case LONG: return value;
-                            case OCTAL_INT: return value==null?null:Integer.valueOf((int)lvalue);
-                            case OCTAL_LONG: return value;
-                            case SHORT: return value==null?null:Short.valueOf((short)lvalue);
-                            case STRING: return value==null?null:value.toString();
-                            case TIME: return value==null?null:new java.sql.Date(lvalue);
-                            case BIG_DECIMAL: return value==null?null:BigDecimal.valueOf(lvalue);
-                        }
-                    }
-                    break;
-                case OCTAL_INT:
-                    {
-                        int ivalue=value==null?0:((Integer)value).intValue();
-                        switch(castToType.getNum()) {
-                            case BOOLEAN: return value==null?null:ivalue!=0?Boolean.TRUE:Boolean.FALSE;
-                            case BYTE: return value==null?null:new Byte((byte)ivalue);
-                            case DATE: return value==null?null:new java.sql.Date(SQLUtility.getMillisFromDays(ivalue));
-                            case DECIMAL_2: return value==null?null:Integer.valueOf(ivalue*100);
-                            case DECIMAL_3: return value==null?null:Integer.valueOf(ivalue*1000);
-                            case DOUBLE: return value==null?null:new Double(ivalue);
-                            case FKEY: return value;
-                            case FLOAT: return value==null?null:Float.valueOf((float)ivalue);
-                            case HOSTNAME: return value==null?null:getHostnameForIPAddress(IPAddress.getIPAddressForInt(ivalue));
-                            case INT: return value;
-                            case INTERVAL: return value==null?null:Long.valueOf(ivalue);
-                            case IP_ADDRESS: return value==null?null:IPAddress.getIPAddressForInt(ivalue);
-                            case LONG: return value==null?null:Long.valueOf(ivalue);
-                            case OCTAL_INT: return value;
-                            case OCTAL_LONG: return value==null?null:Long.valueOf(ivalue);
-                            case PKEY: return value;
-                            case SHORT: return value==null?null:Short.valueOf((short)ivalue);
-                            case STRING: return value==null?null:Integer.toOctalString(ivalue);
-                            case ZONE: return value==null?null:getZoneForHostname(conn, getHostnameForIPAddress(IPAddress.getIPAddressForInt(ivalue)));
-                            case BIG_DECIMAL: return value==null?null:BigDecimal.valueOf(ivalue);
-                        }
-                    }
-                    break;
-                case OCTAL_LONG:
-                    {
-                        long lvalue=value==null?0:((Long)value).longValue();
-                        switch(castToType.getNum()) {
-                            case BOOLEAN: return value==null?null:lvalue!=0?Boolean.TRUE:Boolean.FALSE;
-                            case BYTE: return value==null?null:new Byte((byte)lvalue);
-                            case DATE: return value==null?null:new java.sql.Date(lvalue);
-                            case DECIMAL_2: return value==null?null:Integer.valueOf((int)(lvalue*100));
-                            case DECIMAL_3: return value==null?null:Integer.valueOf((int)(lvalue*1000));
-                            case DOUBLE: return value==null?null:new Double((double)lvalue);
-                            case FLOAT: return value==null?null:Float.valueOf((float)lvalue);
-                            case INT: return value==null?null:Integer.valueOf((int)lvalue);
-                            case INTERVAL: return value;
-                            case LONG: return value;
-                            case OCTAL_INT: return value==null?null:Integer.valueOf((int)lvalue);
-                            case OCTAL_LONG: return value;
-                            case SHORT: return value==null?null:Short.valueOf((short)lvalue);
-                            case STRING: return value==null?null:value.toString();
-                            case TIME: return value==null?null:new java.sql.Date(lvalue);
-                            case BIG_DECIMAL: return value==null?null:BigDecimal.valueOf(lvalue);
-                        }
-                    }
-                    break;
-                case PACKAGE:
+                }
+                break;
+            case DOUBLE:
+                {
+                    double dvalue=value==null?0:((Double)value).doubleValue();
                     switch(castToType.getNum()) {
-                        case ACCOUNTING: return value;
-                        case PACKAGE: return value;
-                        case STRING: return value;
-                    }
-                    break;
-                case PKEY:
-                    switch(castToType.getNum()) {
-                        case FKEY: return value;
-                        case INT: return value;
-                        case OCTAL_INT: return value;
-                        case PKEY: return value;
+                        case BOOLEAN: return value==null?null:dvalue!=0?Boolean.TRUE:Boolean.FALSE;
+                        case BYTE: return value==null?null:new Byte((byte)dvalue);
+                        case DECIMAL_2: return value==null?null:Integer.valueOf((int)(dvalue*100));
+                        case DECIMAL_3: return value==null?null:Integer.valueOf((int)(dvalue*1000));
+                        case DOUBLE: return value;
+                        case FLOAT: return value==null?null:Float.valueOf((float)dvalue);
+                        case INT: return value==null?null:Integer.valueOf((int)dvalue);
+                        case INTERVAL: return value==null?null:Long.valueOf((long)dvalue);
+                        case LONG: return value==null?null:Long.valueOf((long)dvalue);
+                        case OCTAL_INT: return value==null?null:Integer.valueOf((int)dvalue);
+                        case OCTAL_LONG: return value==null?null:Long.valueOf((long)dvalue);
+                        case SHORT: return value==null?null:Short.valueOf((short)dvalue);
                         case STRING: return value==null?null:value.toString();
+                        case BIG_DECIMAL: return value==null?null:BigDecimal.valueOf(dvalue);
                     }
-                    break;
-                case PATH:
+                }
+                break;
+            case EMAIL:
+                switch(castToType.getNum()) {
+                    case EMAIL: return value;
+                    case HOSTNAME: return value==null?null:getHostnameForEmail((String)value);
+                    case INT: return value==null?null:Integer.valueOf(IPAddress.getIntForIPAddress(getIPAddressForHostname(getHostnameForEmail((String)value))));
+                    case IP_ADDRESS: return value==null?null:getIPAddressForHostname(getHostnameForEmail((String)value));
+                    case OCTAL_INT: return value==null?null:Integer.valueOf(IPAddress.getIntForIPAddress(getIPAddressForHostname(getHostnameForEmail((String)value))));
+                    case STRING: return value;
+                    case URL: return value==null?null:"mailto:"+((String)value);
+                    case USERNAME: return value==null?null:getUsernameForEmail((String)value);
+                    case ZONE: return value==null?null:getZoneForHostname(conn, getHostnameForEmail((String)value));
+                }
+                break;
+            case FKEY:
+                switch(castToType.getNum()) {
+                    case FKEY: return value;
+                    case INT: return value;
+                    case OCTAL_INT: return value;
+                    case PKEY: return value;
+                    case STRING: return value==null?null:value.toString();
+                }
+                break;
+            case FLOAT:
+                {
+                    float fvalue=value==null?0:((Float)value).floatValue();
                     switch(castToType.getNum()) {
-                        case PATH: return value;
-                        case STRING: return value;
+                        case BOOLEAN: return value==null?null:fvalue!=0?Boolean.TRUE:Boolean.FALSE;
+                        case BYTE: return value==null?null:new Byte((byte)fvalue);
+                        case DECIMAL_2: return value==null?null:Integer.valueOf((int)(fvalue*100));
+                        case DECIMAL_3: return value==null?null:Integer.valueOf((int)(fvalue*1000));
+                        case DOUBLE: return value==null?null:new Double(fvalue);
+                        case FLOAT: return value;
+                        case INT: return value==null?null:Integer.valueOf((int)fvalue);
+                        case INTERVAL: return value==null?null:Long.valueOf((long)fvalue);
+                        case LONG: return value==null?null:Long.valueOf((long)fvalue);
+                        case OCTAL_INT: return value==null?null:Integer.valueOf((int)fvalue);
+                        case OCTAL_LONG: return value==null?null:Long.valueOf((long)fvalue);
+                        case SHORT: return value==null?null:Short.valueOf((short)fvalue);
+                        case STRING: return value==null?null:value.toString();
+                        case BIG_DECIMAL: return value==null?null:BigDecimal.valueOf(fvalue);
                     }
-                    break;
-                case PHONE:
+                }
+                break;
+            case HOSTNAME:
+                switch(castToType.getNum()) {
+                    case HOSTNAME: return value;
+                    case INT: return value==null?null:Integer.valueOf(IPAddress.getIntForIPAddress(getIPAddressForHostname((String)value)));
+                    case IP_ADDRESS: return value==null?null:getIPAddressForHostname((String)value);
+                    case OCTAL_INT: return value==null?null:Integer.valueOf(IPAddress.getIntForIPAddress(getIPAddressForHostname((String)value)));
+                    case STRING: return value;
+                    case ZONE: return value==null?null:getZoneForHostname(conn, (String)value);
+                }
+                break;
+            case INT:
+                {
+                    int ivalue=value==null?0:((Integer)value).intValue();
                     switch(castToType.getNum()) {
-                        case PHONE: return value;
-                        case STRING: return value;
+                        case BOOLEAN: return value==null?null:ivalue!=0?Boolean.TRUE:Boolean.FALSE;
+                        case BYTE: return value==null?null:new Byte((byte)ivalue);
+                        case DATE: return value==null?null:new java.sql.Date(SQLUtility.getMillisFromDays(ivalue));
+                        case DECIMAL_2: return value==null?null:Integer.valueOf(ivalue*100);
+                        case DECIMAL_3: return value==null?null:Integer.valueOf(ivalue*1000);
+                        case DOUBLE: return value==null?null:new Double(ivalue);
+                        case FKEY: return value;
+                        case FLOAT: return value==null?null:Float.valueOf((float)ivalue);
+                        case HOSTNAME: return value==null?null:getHostnameForIPAddress(IPAddress.getIPAddressForInt(ivalue));
+                        case INT: return value;
+                        case INTERVAL: return value==null?null:Long.valueOf(ivalue);
+                        case IP_ADDRESS: return value==null?null:IPAddress.getIPAddressForInt(ivalue);
+                        case LONG: return value==null?null:Long.valueOf(ivalue);
+                        case OCTAL_INT: return value;
+                        case OCTAL_LONG: return value==null?null:Long.valueOf(ivalue);
+                        case PKEY: return value;
+                        case SHORT: return value==null?null:Short.valueOf((short)ivalue);
+                        case STRING: return value==null?null:value.toString();
+                        case ZONE: return value==null?null:getZoneForHostname(conn, getHostnameForIPAddress(IPAddress.getIPAddressForInt(ivalue)));
+                        case BIG_DECIMAL: return value==null?null:BigDecimal.valueOf(ivalue);
                     }
-                    break;
-                case SHORT:
-                    {
-                        short svalue=value==null?0:((Short)value).shortValue();
-                        switch(castToType.getNum()) {
-                            case BOOLEAN: return value==null?null:svalue!=0?Boolean.TRUE:Boolean.FALSE;
-                            case BYTE: return value==null?null:new Byte((byte)svalue);
-                            case DATE: return value==null?null:new java.sql.Date(SQLUtility.getMillisFromDays(svalue));
-                            case DECIMAL_2: return value==null?null:Integer.valueOf(svalue*100);
-                            case DECIMAL_3: return value==null?null:Integer.valueOf(svalue*1000);
-                            case DOUBLE: return value==null?null:new Double((double)svalue);
-                            case FLOAT: return value==null?null:Float.valueOf((float)svalue);
-                            case INT: return value==null?null:Integer.valueOf(svalue);
-                            case INTERVAL: return value==null?null:Long.valueOf(svalue);
-                            case LONG: return value==null?null:Long.valueOf(svalue);
-                            case OCTAL_INT: return value==null?null:Integer.valueOf(svalue);
-                            case OCTAL_LONG: return value==null?null:Long.valueOf(svalue);
-                            case SHORT: return value;
-                            case STRING: return value==null?null:value.toString();
-                            case BIG_DECIMAL: return value==null?null:BigDecimal.valueOf(svalue);
-                        }
-                    }
-                    break;
-                case STATE:
+                }
+                break;
+            case INTERVAL:
+                {
+                    long lvalue=value==null?0:((Long)value).longValue();
                     switch(castToType.getNum()) {
-                        case STATE: return value;
-                        case STRING: return value;
+                        case BYTE: return value==null?null:new Byte((byte)lvalue);
+                        case DECIMAL_2: return value==null?null:Integer.valueOf((int)(lvalue*100));
+                        case DECIMAL_3: return value==null?null:Integer.valueOf((int)(lvalue*1000));
+                        case DOUBLE: return value==null?null:new Double((double)lvalue);
+                        case FLOAT: return value==null?null:Float.valueOf((float)lvalue);
+                        case INT: return value==null?null:Integer.valueOf((int)lvalue);
+                        case INTERVAL: return value;
+                        case LONG: return value;
+                        case OCTAL_INT: return value==null?null:Integer.valueOf((int)lvalue);
+                        case OCTAL_LONG: return value;
+                        case SHORT: return value==null?null:Short.valueOf((short)lvalue);
+                        case STRING: return value==null?null:value.toString();
+                        case BIG_DECIMAL: return value==null?null:BigDecimal.valueOf(lvalue);
                     }
-                    break;
-                case STRING:
-                    return castToType.parseString((String)value);
-                case TIME:
-                    {
-                        long lvalue=value==null?0:((java.sql.Date)value).getTime();
-                        switch(castToType.getNum()) {
-                            case DATE: return value;
-                            case LONG: return value==null?null:Long.valueOf(lvalue);
-                            case OCTAL_LONG: return value==null?null:Long.valueOf(lvalue);
-                            case STRING: return value==null?null:SQLUtility.getDateTime(lvalue);
-                            case TIME: return value;
-                        }
-                    }
-                    break;
-                case URL:
+                }
+                break;
+            case IP_ADDRESS:
+                switch(castToType.getNum()) {
+                    case HOSTNAME: return value==null?null:getHostnameForIPAddress((String)value);
+                    case INT: return value==null?null:Integer.valueOf(IPAddress.getIntForIPAddress((String)value));
+                    case IP_ADDRESS: return value;
+                    case OCTAL_INT: return value==null?null:Integer.valueOf(IPAddress.getIntForIPAddress((String)value));
+                    case STRING: return value;
+                    case ZONE: return value==null?null:getZoneForHostname(conn, getHostnameForIPAddress((String)value));
+                }
+                break;
+            case LONG:
+                {
+                    long lvalue=value==null?0:((Long)value).longValue();
                     switch(castToType.getNum()) {
-                        case HOSTNAME: return value==null?null:new URL((String)value).getHost();
-                        case INT: return value==null?null:Integer.valueOf(IPAddress.getIntForIPAddress(getIPAddressForHostname(new URL((String)value).getHost())));
-                        case IP_ADDRESS: return value==null?null:getIPAddressForHostname(new URL((String)value).getHost());
-                        case OCTAL_INT: return value==null?null:Integer.valueOf(IPAddress.getIntForIPAddress(getIPAddressForHostname(new URL((String)value).getHost())));
-                        case PATH: return value==null?null:new URL((String)value).getPath();
-                        case STRING: return value;
-                        case URL: return value;
-                        case ZONE: return value==null?null:getZoneForHostname(conn, new URL((String)value).getHost());
+                        case BOOLEAN: return value==null?null:lvalue!=0?Boolean.TRUE:Boolean.FALSE;
+                        case BYTE: return value==null?null:new Byte((byte)lvalue);
+                        case DATE: return value==null?null:new java.sql.Date(lvalue);
+                        case DECIMAL_2: return value==null?null:Integer.valueOf((int)(lvalue*100));
+                        case DECIMAL_3: return value==null?null:Integer.valueOf((int)(lvalue*1000));
+                        case DOUBLE: return value==null?null:new Double((double)lvalue);
+                        case FLOAT: return value==null?null:Float.valueOf((float)lvalue);
+                        case INT: return value==null?null:Integer.valueOf((int)lvalue);
+                        case INTERVAL: return value;
+                        case LONG: return value;
+                        case OCTAL_INT: return value==null?null:Integer.valueOf((int)lvalue);
+                        case OCTAL_LONG: return value;
+                        case SHORT: return value==null?null:Short.valueOf((short)lvalue);
+                        case STRING: return value==null?null:value.toString();
+                        case TIME: return value==null?null:new java.sql.Date(lvalue);
+                        case BIG_DECIMAL: return value==null?null:BigDecimal.valueOf(lvalue);
                     }
-                    break;
-                case USERNAME:
+                }
+                break;
+            case OCTAL_INT:
+                {
+                    int ivalue=value==null?0:((Integer)value).intValue();
                     switch(castToType.getNum()) {
-                        case STRING: return value;
-                        case USERNAME: return value;
+                        case BOOLEAN: return value==null?null:ivalue!=0?Boolean.TRUE:Boolean.FALSE;
+                        case BYTE: return value==null?null:new Byte((byte)ivalue);
+                        case DATE: return value==null?null:new java.sql.Date(SQLUtility.getMillisFromDays(ivalue));
+                        case DECIMAL_2: return value==null?null:Integer.valueOf(ivalue*100);
+                        case DECIMAL_3: return value==null?null:Integer.valueOf(ivalue*1000);
+                        case DOUBLE: return value==null?null:new Double(ivalue);
+                        case FKEY: return value;
+                        case FLOAT: return value==null?null:Float.valueOf((float)ivalue);
+                        case HOSTNAME: return value==null?null:getHostnameForIPAddress(IPAddress.getIPAddressForInt(ivalue));
+                        case INT: return value;
+                        case INTERVAL: return value==null?null:Long.valueOf(ivalue);
+                        case IP_ADDRESS: return value==null?null:IPAddress.getIPAddressForInt(ivalue);
+                        case LONG: return value==null?null:Long.valueOf(ivalue);
+                        case OCTAL_INT: return value;
+                        case OCTAL_LONG: return value==null?null:Long.valueOf(ivalue);
+                        case PKEY: return value;
+                        case SHORT: return value==null?null:Short.valueOf((short)ivalue);
+                        case STRING: return value==null?null:Integer.toOctalString(ivalue);
+                        case ZONE: return value==null?null:getZoneForHostname(conn, getHostnameForIPAddress(IPAddress.getIPAddressForInt(ivalue)));
+                        case BIG_DECIMAL: return value==null?null:BigDecimal.valueOf(ivalue);
                     }
-                    break;
-                case ZIP:
+                }
+                break;
+            case OCTAL_LONG:
+                {
+                    long lvalue=value==null?0:((Long)value).longValue();
                     switch(castToType.getNum()) {
-                        case STRING: return value;
-                        case ZIP: return value;
+                        case BOOLEAN: return value==null?null:lvalue!=0?Boolean.TRUE:Boolean.FALSE;
+                        case BYTE: return value==null?null:new Byte((byte)lvalue);
+                        case DATE: return value==null?null:new java.sql.Date(lvalue);
+                        case DECIMAL_2: return value==null?null:Integer.valueOf((int)(lvalue*100));
+                        case DECIMAL_3: return value==null?null:Integer.valueOf((int)(lvalue*1000));
+                        case DOUBLE: return value==null?null:new Double((double)lvalue);
+                        case FLOAT: return value==null?null:Float.valueOf((float)lvalue);
+                        case INT: return value==null?null:Integer.valueOf((int)lvalue);
+                        case INTERVAL: return value;
+                        case LONG: return value;
+                        case OCTAL_INT: return value==null?null:Integer.valueOf((int)lvalue);
+                        case OCTAL_LONG: return value;
+                        case SHORT: return value==null?null:Short.valueOf((short)lvalue);
+                        case STRING: return value==null?null:value.toString();
+                        case TIME: return value==null?null:new java.sql.Date(lvalue);
+                        case BIG_DECIMAL: return value==null?null:BigDecimal.valueOf(lvalue);
                     }
-                    break;
-                case ZONE:
+                }
+                break;
+            case PACKAGE:
+                switch(castToType.getNum()) {
+                    case ACCOUNTING: return value;
+                    case PACKAGE: return value;
+                    case STRING: return value;
+                }
+                break;
+            case PKEY:
+                switch(castToType.getNum()) {
+                    case FKEY: return value;
+                    case INT: return value;
+                    case OCTAL_INT: return value;
+                    case PKEY: return value;
+                    case STRING: return value==null?null:value.toString();
+                }
+                break;
+            case PATH:
+                switch(castToType.getNum()) {
+                    case PATH: return value;
+                    case STRING: return value;
+                }
+                break;
+            case PHONE:
+                switch(castToType.getNum()) {
+                    case PHONE: return value;
+                    case STRING: return value;
+                }
+                break;
+            case SHORT:
+                {
+                    short svalue=value==null?0:((Short)value).shortValue();
                     switch(castToType.getNum()) {
-                        case HOSTNAME: return value;
-                        case INT: return value==null?null:Integer.valueOf(IPAddress.getIntForIPAddress(getIPAddressForHostname((String)value)));
-                        case IP_ADDRESS: return value==null?null:getIPAddressForHostname((String)value);
-                        case OCTAL_INT: return value==null?null:Integer.valueOf(IPAddress.getIntForIPAddress(getIPAddressForHostname((String)value)));
-                        case STRING: return value;
-                        case ZONE: return value;
+                        case BOOLEAN: return value==null?null:svalue!=0?Boolean.TRUE:Boolean.FALSE;
+                        case BYTE: return value==null?null:new Byte((byte)svalue);
+                        case DATE: return value==null?null:new java.sql.Date(SQLUtility.getMillisFromDays(svalue));
+                        case DECIMAL_2: return value==null?null:Integer.valueOf(svalue*100);
+                        case DECIMAL_3: return value==null?null:Integer.valueOf(svalue*1000);
+                        case DOUBLE: return value==null?null:new Double((double)svalue);
+                        case FLOAT: return value==null?null:Float.valueOf((float)svalue);
+                        case INT: return value==null?null:Integer.valueOf(svalue);
+                        case INTERVAL: return value==null?null:Long.valueOf(svalue);
+                        case LONG: return value==null?null:Long.valueOf(svalue);
+                        case OCTAL_INT: return value==null?null:Integer.valueOf(svalue);
+                        case OCTAL_LONG: return value==null?null:Long.valueOf(svalue);
+                        case SHORT: return value;
+                        case STRING: return value==null?null:value.toString();
+                        case BIG_DECIMAL: return value==null?null:BigDecimal.valueOf(svalue);
                     }
-                    break;
-                case BIG_DECIMAL:
-                    {
-                        BigDecimal bvalue = (BigDecimal)value;
-                        switch(castToType.getNum()) {
-                            case BOOLEAN: return value==null?null:bvalue.compareTo(BigDecimal.ZERO)!=0?Boolean.TRUE:Boolean.FALSE;
-                            case BYTE: return value==null?null:bvalue.byteValue();
-                            case DECIMAL_2: return value==null?null:bvalue.multiply(bigDecimal100).intValue();
-                            case DECIMAL_3: return value==null?null:bvalue.multiply(bigDecimal1000).intValue();
-                            case DOUBLE: return value==null?null:bvalue.doubleValue();
-                            case FLOAT: return value==null?null:bvalue.floatValue();
-                            case INT: return value==null?null:bvalue.intValue();
-                            case INTERVAL: return value==null?null:bvalue.longValue();
-                            case LONG: return value==null?null:bvalue.longValue();
-                            case OCTAL_INT: return value==null?null:bvalue.intValue();
-                            case OCTAL_LONG: return value==null?null:bvalue.longValue();
-                            case SHORT: return value==null?null:bvalue.shortValue();
-                            case STRING: return value==null?null:bvalue.toString();
-                            case BIG_DECIMAL: return value;
-                        }
+                }
+                break;
+            case STATE:
+                switch(castToType.getNum()) {
+                    case STATE: return value;
+                    case STRING: return value;
+                }
+                break;
+            case STRING:
+                return castToType.parseString((String)value);
+            case TIME:
+                {
+                    long lvalue=value==null?0:((java.sql.Date)value).getTime();
+                    switch(castToType.getNum()) {
+                        case DATE: return value;
+                        case LONG: return value==null?null:Long.valueOf(lvalue);
+                        case OCTAL_LONG: return value==null?null:Long.valueOf(lvalue);
+                        case STRING: return value==null?null:SQLUtility.getDateTime(lvalue);
+                        case TIME: return value;
                     }
-                    break;
-            }
-            throw new IllegalArgumentException("Unable to cast from "+type+" to "+castToType.getType());
-        } catch(MalformedURLException err) {
-            throw new WrappedException(err);
+                }
+                break;
+            case URL:
+                switch(castToType.getNum()) {
+                    case HOSTNAME: return value==null?null:new URL((String)value).getHost();
+                    case INT: return value==null?null:Integer.valueOf(IPAddress.getIntForIPAddress(getIPAddressForHostname(new URL((String)value).getHost())));
+                    case IP_ADDRESS: return value==null?null:getIPAddressForHostname(new URL((String)value).getHost());
+                    case OCTAL_INT: return value==null?null:Integer.valueOf(IPAddress.getIntForIPAddress(getIPAddressForHostname(new URL((String)value).getHost())));
+                    case PATH: return value==null?null:new URL((String)value).getPath();
+                    case STRING: return value;
+                    case URL: return value;
+                    case ZONE: return value==null?null:getZoneForHostname(conn, new URL((String)value).getHost());
+                }
+                break;
+            case USERNAME:
+                switch(castToType.getNum()) {
+                    case STRING: return value;
+                    case USERNAME: return value;
+                }
+                break;
+            case ZIP:
+                switch(castToType.getNum()) {
+                    case STRING: return value;
+                    case ZIP: return value;
+                }
+                break;
+            case ZONE:
+                switch(castToType.getNum()) {
+                    case HOSTNAME: return value;
+                    case INT: return value==null?null:Integer.valueOf(IPAddress.getIntForIPAddress(getIPAddressForHostname((String)value)));
+                    case IP_ADDRESS: return value==null?null:getIPAddressForHostname((String)value);
+                    case OCTAL_INT: return value==null?null:Integer.valueOf(IPAddress.getIntForIPAddress(getIPAddressForHostname((String)value)));
+                    case STRING: return value;
+                    case ZONE: return value;
+                }
+                break;
+            case BIG_DECIMAL:
+                {
+                    BigDecimal bvalue = (BigDecimal)value;
+                    switch(castToType.getNum()) {
+                        case BOOLEAN: return value==null?null:bvalue.compareTo(BigDecimal.ZERO)!=0?Boolean.TRUE:Boolean.FALSE;
+                        case BYTE: return value==null?null:bvalue.byteValue();
+                        case DECIMAL_2: return value==null?null:bvalue.multiply(bigDecimal100).intValue();
+                        case DECIMAL_3: return value==null?null:bvalue.multiply(bigDecimal1000).intValue();
+                        case DOUBLE: return value==null?null:bvalue.doubleValue();
+                        case FLOAT: return value==null?null:bvalue.floatValue();
+                        case INT: return value==null?null:bvalue.intValue();
+                        case INTERVAL: return value==null?null:bvalue.longValue();
+                        case LONG: return value==null?null:bvalue.longValue();
+                        case OCTAL_INT: return value==null?null:bvalue.intValue();
+                        case OCTAL_LONG: return value==null?null:bvalue.longValue();
+                        case SHORT: return value==null?null:bvalue.shortValue();
+                        case STRING: return value==null?null:bvalue.toString();
+                        case BIG_DECIMAL: return value;
+                    }
+                }
+                break;
         }
+        throw new IllegalArgumentException("Unable to cast from "+type+" to "+castToType.getType());
     }
     private static String getHostnameForEmail(String email) {
         int pos=email.indexOf('@');
@@ -626,26 +620,18 @@ final public class SchemaType extends GlobalObjectIntegerKey<SchemaType> {
         if(pos==-1) throw new IllegalArgumentException("Unable to find @ in email address: "+email);
         return email.substring(0, pos);
     }
-    private static String getIPAddressForHostname(String hostname) {
-        try {
-            return InetAddress.getByName(hostname).getHostAddress();
-        } catch(UnknownHostException err) {
-            throw new WrappedException(err);
-        }
+    private static String getIPAddressForHostname(String hostname) throws UnknownHostException {
+        return InetAddress.getByName(hostname).getHostAddress();
     }
-    private static String getHostnameForIPAddress(String ipAddress) {
-        try {
-            return InetAddress.getByName(ipAddress).getCanonicalHostName();
-        } catch(UnknownHostException err) {
-            throw new WrappedException(err);
-        }
+    private static String getHostnameForIPAddress(String ipAddress) throws UnknownHostException {
+        return InetAddress.getByName(ipAddress).getCanonicalHostName();
     }
 
-    private static String getZoneForHostname(AOServConnector conn, String hostname) {
+    private static String getZoneForHostname(AOServConnector conn, String hostname) throws IOException, IllegalArgumentException, SQLException {
         return conn.dnsZones.getHostTLD(hostname);
     }
 
-    public int compareTo(Object value1, Object value2) throws IllegalArgumentException {
+    public int compareTo(Object value1, Object value2) throws IllegalArgumentException, SQLException, UnknownHostException {
         return compareTo(value1, value2, pkey);
     }
 
@@ -664,84 +650,78 @@ final public class SchemaType extends GlobalObjectIntegerKey<SchemaType> {
      *
      * @exception  IllegalArgumentException  if the type is invalid
      */
-    public static int compareTo(Object value1, Object value2, int type) throws IllegalArgumentException {
-        try {
-            if(value1==null) {
-                return value2==null?0:-1;
-            } else {
-                if(value2==null) return 1;
-                switch(type) {
-                    case ACCOUNTING:
-                    case CITY:
-                    case COUNTRY:
-                    case PACKAGE:
-                    case PATH:
-                    case PHONE:
-                    case STATE:
-                    case STRING:
-                    case URL:
-                    case USERNAME:
-                    case ZIP:
-                        return StringUtility.compareToIgnoreCaseCarefulEquals((String)value1, (String)value2);
-                    case BOOLEAN:
-                        return
-                            ((Boolean)value1).booleanValue()
-                            ?(((Boolean)value2).booleanValue()?0:1)
-                            :(((Boolean)value2).booleanValue()?-1:0)
-                        ;
-                    case BYTE:
-                        return ((Byte)value1).compareTo((Byte)value2);
-                    case DATE:
-                        {
-                            long t1=SQLUtility.roundToDay(((java.sql.Date)value1).getTime());
-                            long t2=SQLUtility.roundToDay(((java.sql.Date)value2).getTime());
-                            return t1>t2?1:t1<t2?-1:0;
-                        }
-                    case DECIMAL_2:
-                        {
-                            int i1=((Integer)value1).intValue();
-                            int i2=((Integer)value2).intValue();
-                            return i1>i2?1:i1<i2?-1:0;
-                        }
-                    case DECIMAL_3:
-                        {
-                            int i1=((Integer)value1).intValue();
-                            int i2=((Integer)value2).intValue();
-                            return i1>i2?1:i1<i2?-1:0;
-                        }
-                    case FKEY:
-                    case INT:
-                    case OCTAL_INT:
-                    case PKEY:
-                        return ((Integer)value1).compareTo((Integer)value2);
-                    case DOUBLE:
-                        return ((Double)value1).compareTo((Double)value2);
-                    case EMAIL:
-                        return compareEmailAddresses((String)value1, (String)value2);
-                    case FLOAT:
-                        return ((Float)value1).compareTo((Float)value2);
-                    case HOSTNAME:
-                    case ZONE:
-                        return compareHostnames((String)value1, (String)value2);
-                    case INTERVAL:
-                    case LONG:
-                    case OCTAL_LONG:
-                        return ((Long)value1).compareTo((Long)value2);
-                    case IP_ADDRESS:
-                        return compareIPAddresses((String)value1, (String)value2);
-                    case SHORT:
-                        return ((Short)value1).compareTo((Short)value2);
-                    case TIME:
-                        return ((java.sql.Date)value1).compareTo((java.sql.Date)value2);
-                    case BIG_DECIMAL:
-                        return ((BigDecimal)value1).compareTo((BigDecimal)value2);
-                    default: throw new IllegalArgumentException("Unknown type: "+type);
-                }
+    public static int compareTo(Object value1, Object value2, int type) throws IllegalArgumentException, SQLException, UnknownHostException {
+        if(value1==null) {
+            return value2==null?0:-1;
+        } else {
+            if(value2==null) return 1;
+            switch(type) {
+                case ACCOUNTING:
+                case CITY:
+                case COUNTRY:
+                case PACKAGE:
+                case PATH:
+                case PHONE:
+                case STATE:
+                case STRING:
+                case URL:
+                case USERNAME:
+                case ZIP:
+                    return StringUtility.compareToIgnoreCaseCarefulEquals((String)value1, (String)value2);
+                case BOOLEAN:
+                    return
+                        ((Boolean)value1).booleanValue()
+                        ?(((Boolean)value2).booleanValue()?0:1)
+                        :(((Boolean)value2).booleanValue()?-1:0)
+                    ;
+                case BYTE:
+                    return ((Byte)value1).compareTo((Byte)value2);
+                case DATE:
+                    {
+                        long t1=SQLUtility.roundToDay(((java.sql.Date)value1).getTime());
+                        long t2=SQLUtility.roundToDay(((java.sql.Date)value2).getTime());
+                        return t1>t2?1:t1<t2?-1:0;
+                    }
+                case DECIMAL_2:
+                    {
+                        int i1=((Integer)value1).intValue();
+                        int i2=((Integer)value2).intValue();
+                        return i1>i2?1:i1<i2?-1:0;
+                    }
+                case DECIMAL_3:
+                    {
+                        int i1=((Integer)value1).intValue();
+                        int i2=((Integer)value2).intValue();
+                        return i1>i2?1:i1<i2?-1:0;
+                    }
+                case FKEY:
+                case INT:
+                case OCTAL_INT:
+                case PKEY:
+                    return ((Integer)value1).compareTo((Integer)value2);
+                case DOUBLE:
+                    return ((Double)value1).compareTo((Double)value2);
+                case EMAIL:
+                    return compareEmailAddresses((String)value1, (String)value2);
+                case FLOAT:
+                    return ((Float)value1).compareTo((Float)value2);
+                case HOSTNAME:
+                case ZONE:
+                    return compareHostnames((String)value1, (String)value2);
+                case INTERVAL:
+                case LONG:
+                case OCTAL_LONG:
+                    return ((Long)value1).compareTo((Long)value2);
+                case IP_ADDRESS:
+                    return compareIPAddresses((String)value1, (String)value2);
+                case SHORT:
+                    return ((Short)value1).compareTo((Short)value2);
+                case TIME:
+                    return ((java.sql.Date)value1).compareTo((java.sql.Date)value2);
+                case BIG_DECIMAL:
+                    return ((BigDecimal)value1).compareTo((BigDecimal)value2);
+                default: throw new IllegalArgumentException("Unknown type: "+type);
             }
-        } catch(IOException err) {
-            throw new WrappedException(err);
-        } catch(SQLException err) {
-            throw new WrappedException(err);
         }
     }
 
@@ -810,7 +790,7 @@ final public class SchemaType extends GlobalObjectIntegerKey<SchemaType> {
         return StringUtility.compareToIgnoreCaseCarefulEquals(ip1, ip2);
     }
 
-    public Object getColumn(int i) {
+    Object getColumnImpl(int i) {
         switch(i) {
             case COLUMN_TYPE: return type;
             case 1: return Integer.valueOf(pkey);
